--- a/main.html
+++ b/main.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Soundbar</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    #buttons {
+      display: flex;
+      justify-content: center;
+      margin-top: 50px;
+    }
+    .btn {
+      margin: 0 10px;
+      padding: 10px 20px;
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    .btn.stop {
+      background-color: #dc3545;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div id="buttons">
+    <button class="btn" onclick="playSound('sound1.mp3')">Sound 1</button>
+    <button class="btn" onclick="playSound('sound2.mp3')">Sound 2</button>
+    <button class="btn" onclick="playSound('sound3.mp3')">Sound 3</button>
+    <button class="btn stop" onclick="stopSound()">Stop</button>
+  </div>
 
+  <script>
+    let audio = null;
+
+    function playSound(filename) {
+      stopSound();
+      audio = new Audio(`sounds/${filename}`);
+      audio.play();
+    }
+
+    function stopSound() {
+      if (audio) {
+        audio.pause();
+        audio.currentTime = 0;
+      }
+    }
+  </script>
 </body>
-
 </html>
